[gd_scene load_steps=4 format=2]

[ext_resource path="res://Jogador.gd" type="Script" id=1]
[ext_resource path="res://Square.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[node name="Jogador" type="Sprite"]
modulate = Color( 0.101961, 0.419608, 0.823529, 1 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 2 )
script = ExtResource( 1 )

[node name="tempo_recarga" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="tempo_recarga_cooldown" type="Timer" parent="."]
one_shot = true

[node name="hitbox" type="Area2D" parent="." groups=[
"jogador",
]]

[node name="col" type="CollisionShape2D" parent="hitbox"]
visible = false
shape = SubResource( 1 )
[connection signal="timeout" from="tempo_recarga" to="." method="_on_tempo_recarga_timeout"]
[connection signal="timeout" from="tempo_recarga_cooldown" to="." method="_on_tempo_recarga_cooldown_timeout"]
[connection signal="area_entered" from="hitbox" to="." method="_on_hitbox_area_entered"]
